User auth and verification added

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 PORT = 5000
 
-DB_URL = mongodb+srv://dbUser:dbUser@cluster0.ssqzn.mongodb.net/Starthub
+NODE_ENV = development
+
+MONGO_URI = mongodb+srv://dbUser:dbUser@cluster0.ssqzn.mongodb.net/Starthub
 
 JWT_SECRET = secret
 
